<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_phone_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.drulabs.syncroedit.PhoneVerificationActivity">

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xx_large"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"/>

    <org.drulabs.syncroedit.ui.DruEditText
        android:id="@+id/et_phone_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xx_large"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_otp_hint"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btn_verify_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/verify_text"/>

    <org.drulabs.syncroedit.ui.DruTextView
        android:id="@+id/textView2"
        style="@style/regular_mediumfont_wrap_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_verify_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/sms_charge_msg"/>
</RelativeLayout>
