<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_note_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.drulabs.syncroedit.NoteEditorActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon_note_image"
        android:layout_width="@dimen/box_medium"
        android:layout_height="@dimen/box_medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_very_small"
        android:visibility="visible"
        android:background="@mipmap/ic_pic_image" />

    <EditText
        android:id="@+id/et_new_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_small"
        android:layout_toRightOf="@+id/icon_note_image"
        android:hint="@string/text_note_title"
        android:inputType="textPersonName"
        android:textSize="@dimen/txt_big" />

    <FrameLayout
        android:id="@+id/new_note_content_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/et_new_note_item_data"
        android:layout_below="@id/et_new_note_title"
        android:layout_marginBottom="@dimen/margin_very_small"
        android:layout_marginEnd="@dimen/margin_very_small"
        android:layout_marginLeft="@dimen/margin_very_small"
        android:layout_marginRight="@dimen/margin_very_small"
        android:layout_marginStart="@dimen/margin_very_small"
        android:layout_marginTop="@dimen/margin_regular">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_note_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_note_para"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/text_add_para"
            android:visibility="gone" />
    </FrameLayout>

    <EditText
        android:id="@+id/et_new_note_item_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_small"
        android:layout_toLeftOf="@+id/fab_add_note_item"
        android:hint="@string/enter_note_text"
        android:textSize="@dimen/txt_medium" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_note_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_small"
        app:srcCompat="@mipmap/ic_done" />
</RelativeLayout>
